chore: fix #table alignment

--- a/packages/dnb-ui-lib/src/style/elements/table.scss
+++ b/packages/dnb-ui-lib/src/style/elements/table.scss
@@ -9,7 +9,7 @@
   &::before {
     content: '';
     position: absolute;
-    top: -0.6rem;
+    top: -0.5rem;
     left: -1rem;
     right: 0.5rem;
     height: 2.5rem;
